--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body{
     background-position: top;
     background-repeat:no-repeat;
     background-size:cover;
-    height: 867px;
+    height: 100vw;
     box-shadow:  0px 5px 10px 0px rgba(47,47,47,0.11);;
 }
 .portfolioBlock{
